# ProNDF

./: .gitignore  LICENSE  README.md  __init__.py  act_fns.py  blocks.py  configs.py  data.py  examples.ipynb  loggers.py  losses.py  models.py  optimizers.py  plotting.py  pyproject.toml  registries.py  test_noise_floor.py  tests.ipynb  utils.py
datasets/: __init__.py
datasets/DNS_ROM/: DNS_ROM.pkl  DNS_ROM_dataset_meta.json  DNS_ROM_dataset_num.npy  DNS_ROM_dataset_source.npy  DNS_ROM_dataset_targets.npy  DNS_ROM_dataset_test_meta.json  DNS_ROM_dataset_test_num.npy  DNS_ROM_dataset_test_source.npy  DNS_ROM_dataset_test_targets.npy  DNS_ROM_dataset_train_meta.json  DNS_ROM_dataset_train_num.npy  DNS_ROM_dataset_train_source.npy  DNS_ROM_dataset_train_targets.npy  DNS_ROM_dataset_val_meta.json  DNS_ROM_dataset_val_num.npy  DNS_ROM_dataset_val_source.npy  DNS_ROM_dataset_val_targets.npy  __init__.py  make_dataset.py  notes.md
datasets/HOIP/: HOIP.pkl  HOIP_dataset_cat.npy  HOIP_dataset_meta.json  HOIP_dataset_source.npy  HOIP_dataset_targets.npy  HOIP_dataset_test_cat.npy  HOIP_dataset_test_meta.json  HOIP_dataset_test_source.npy  HOIP_dataset_test_targets.npy  HOIP_dataset_train_cat.npy  HOIP_dataset_train_meta.json  HOIP_dataset_train_source.npy  HOIP_dataset_train_targets.npy  HOIP_dataset_val_cat.npy  HOIP_dataset_val_targets.npy  __init__.py  make_dataset.py  notes.md
datasets/borehole/: __init__.py  borehole_dataset_meta.json  borehole_dataset_num.npy  borehole_dataset_source.npy  borehole_dataset_targets.npy  (+14 more)
notebooks/: __init__.py  examples.ipynb  tests.ipynb
(+89 files in other folders)
